Tiger_frontend/project1_test_code_example/tests/errors/function-duplicate-declare.tiger
main let
        var sum, i : int;
        function X ( n : int ) begin
                printi(n);
        end;
        function X ( n : int ) begin
                printi(n);
        end;
in
begin
        for i := 0 to 99 do
                sum := sum + i;
        enddo;
end